[package]
name = "cggmp-threshold-ecdsa"
version = "0.1.0"
edition = "2021"
authors = [
    "Drew Stone <drew@webb.tools>",
    "Akilesh Tangella <akilesh@webb.tools>",
]

[workspace]
members = [
  "multi-party-ecdsa"
]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.10", default-features = false }
centipede = { version = "0.3.1", default-features = false }
zk-paillier = { version = "0.4.4", default-features = false }
fs-dkr = { git = "https://github.com/webb-tools/fs-dkr", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
sha2 = "0.9"
digest = "0.9"
generic-array = "0.14"
rand_chacha = "0.3.1"
rand = "0.8.5"

[dependencies.paillier]
version = "0.4.3"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
version = "0.8"
path = "multi-party-ecdsa"
default-features = false

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}

thiserror = "1.0.23"
round-based = { version = "0.1.4", features = ["dev"] }

[features]
default = ["rust-gmp-kzen"]
rust-gmp-kzen = ["fs-dkr/rust-gmp-kzen"]
num-bigint = ["fs-dkr/num-bigint"]
