[package]
name = "cggmp-threshold-ecdsa"
version = "0.1.0"
edition = "2021"
authors = [
    "Drew Stone <drew@webb.tools>",
    "Akilesh Tangella <akilesh@webb.tools>",
]

[workspace]
members = [
  "multi-party-ecdsa",
  "fs-dkr",
  "tss-core",
]

[workspace.dependencies]
curv-kzen = { version = "0.10", default-features = false }
centipede = { version = "0.3.1", default-features = false }
zk-paillier = { version = "0.4.4", default-features = false }
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
round-based = { git = "https://github.com/webb-tools/round-based-protocol", version = "0.1.4", features = ["dev"] }
thiserror = "1.0.23"
tss-core = { path = "tss-core" }
rand_chacha = "0.3.1"
rand = "0.8.5"

[workspace.dependencies.multi-party-ecdsa]
version = "0.8"
path = "multi-party-ecdsa"
default-features = false

[workspace.dependencies.paillier]
version = "0.4.3"
package = "kzen-paillier"
default-features = false

[dependencies]
multi-party-ecdsa.workspace = true
curv-kzen.workspace = true
centipede.workspace = true
zk-paillier.workspace = true
sha2.workspace = true
serde.workspace = true
zeroize.workspace = true
paillier.workspace = true
round-based.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
fs-dkr = { path = "fs-dkr", default-features = false }
bincode = "1.3.3"
digest = "0.9"
generic-array = "0.14"
getrandom = { version = "0.2", optional = true }
tss-core.workspace = true

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}

[dev-dependencies.multi-party-ecdsa]
workspace = true
default-features = false
features = ["dev"]

[features]
default = ["rust-gmp-kzen"]
rust-gmp-kzen = ["fs-dkr/rust-gmp-kzen"]
num-bigint = ["fs-dkr/num-bigint"]
js = ["getrandom/js"]
