[package]
name = "multi-party-ecdsa"
version = "0.8.2"
edition = "2021"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
default = ["curv-kzen/rust-gmp-kzen"]
# Used conditional compilation for testing and development environments.
dev = []

[dependencies]
curv-kzen.workspace = true
centipede.workspace = true
zk-paillier.workspace = true
sha2.workspace = true
paillier.workspace = true
round-based.workspace = true
tss-core.workspace = true
thiserror.workspace = true
serde.workspace = true
zeroize.workspace = true

bincode = "1.3.3"
derivative = "2.2.0"
log = "0.4.17"
merlin = "3.0.0"
serde_repr = "0.1.16"
serde_with = "3.3.0"
subtle = { version = "2" }

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}

thiserror = "1.0.23"
round-based = { git = "https://github.com/webb-tools/round-based-protocol", features = ["dev"] }

[[example]]
name = "common"
crate-type = ["lib"]
