[package]
name = "tss-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen.workspace = true
serde.workspace = true
zeroize.workspace = true
paillier.workspace = true
sha2.workspace = true

bincode = "1.3.3"
merlin = "3.0.0"
serde_repr = "0.1.16"
serde_with = "3.3.0"

# [dependencies.multi-party-ecdsa]
# workspace = true
# default-features = false# 

# [dev-dependencies.multi-party-ecdsa]
# workspace = true
# default-features = false
# features = ["dev"]

[features]
default = ["curv-kzen/rust-gmp-kzen"]